--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Willa Kiane</title>
+</head>
+<body>
+	<div style="display: flex; justify-content: center; align-items: center;">
+		<p>Hello World!</p>
+	</div>
+</body>
+</html>
