--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Willa Kiane</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Willa Kiane - Web Developer</title>
+	<!-- meta tags -->
+	<meta name="Keywords" content="webflow, javascript, jquery, landing page, bootstrap, html, ruby on rails, pagespeed insights">
+	<meta name="Description" content="Desenvolvedora web especializada em webflow, javascript e ruby on rails">
+
+	<!--styles -->
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div style="display: flex; justify-content: center; align-items: center;">
-		<p>Hello World!</p>
-	</div>
+	<p>hello world!</p>
+
+
+
+	<!-- scripts -->
+	<script src="script.js"></script>
 </body>
 </html>
