tirar link twitter

--- a/teste.html
+++ b/teste.html
@@ -54,23 +54,12 @@
                                         </div>
 
                                         <div class="hero__slogan"></div>
-                                        <p class="hero__eyebrow eyebrow">Onde me encontrar?
-                                            <div class="grid__row links">
-                                                <div class="column">
-                                                    <h4 class="link__section-title">Profissional</h4>
-                                                    <ul>
-                                                        <li class="shake"><a href="https://twitter.com/justalever">wkiane - linkedin</a></li><br>
-                                                        <li class="shake"><a href="https://github.com/wkiane">wkiane - github</a></li><br>
-                                                        <li class="shake"><a target="_blank" href="https://proteina.digital">Proteina.digital - Agência onde trabalho</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="column">
-                                                    <h4 class="link__section-title">Pessoal</h4>
-                                                    <ul>
-                                                        <li class="shake"><a href="https://twitter.com/wkiane1">wkiane1</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
+                                        <p class="hero__eyebrow eyebrow">Onde me encontrar?</p>
+                                        <ul>
+                                            <li class="shake text-light"><a href="https://twitter.com/justalever">wkiane - linkedin</a></li><br>
+                                            <li class="shake text-light"><a href="https://github.com/wkiane">wkiane - github</a></li><br>
+                                            <li class="shake text-light"><a target="_blank" href="https://proteina.digital">Proteina.digital - Agência onde trabalho</a></li>
+                                        </ul>
                                 </div>
                                 <!--
                                 <div class="hero__andy animated fadeIn"><img alt="Andy Leverenz" class="hero__image animated fadeIn" src="img/andy.8e5436f.png"></div>
@@ -179,7 +168,6 @@
                                 <div class="footer-content one-half">
                                     <p class="footer__email">
                                     <ul class="footer__links">
-                                        <li><a target="_blank" href="https://twitter.com/wkiane1">Twitter</a>
                                         <li><a target="_blank" href="https://github.com/wkiane">Github</a>
                                         <li><a target="_blank" href="https://www.proteina.digital/">Agência</a>
                                     </ul>
