ajustes mobile link eric

--- a/teste.html
+++ b/teste.html
@@ -44,8 +44,8 @@
                         <div>
                             <div class="hero__content container">
                                 <div class="hero__base">
-                                    <p class="hero__eyebrow eyebrow">Olá mundo!
-                                        <h1 class="hero__headline shake">Willa Kiane</h1>
+                                    <p class="hero__eyebrow eyebrow">Olá, eu sou
+                                        <h1 class="hero__headline">Willa Kiane</h1>
 
                                         <h4 class="home-intro__tagline eyebrow">o que eu faço?</h4>
                                         <div class="home-intro__lead">
@@ -56,9 +56,10 @@
                                         <div class="hero__slogan"></div>
                                         <p class="hero__eyebrow eyebrow">Onde me encontrar?</p>
                                         <ul>
-                                            <li class="shake text-light"><a href="https://twitter.com/justalever">wkiane - linkedin</a></li><br>
-                                            <li class="shake text-light"><a href="https://github.com/wkiane">wkiane - github</a></li><br>
-                                            <li class="shake text-light"><a target="_blank" href="https://proteina.digital">Proteina.digital - Agência onde trabalho</a></li>
+                                            <li class="shake text-light"><a target="_blank" href="#">wkiane - linkedin</a></li><br>
+                                            <li class="shake text-light"><a target="_blank" href="https://github.com/wkiane">wkiane - github</a></li><br>
+                                            <li class="shake text-light"><a target="_blank" href="https://proteina.digital">Proteina.digital - Agência onde trabalho</a></li><br>
+                                            <li class="shake text-light"><a target="_blank" href="https://api.whatsapp.com/send?phone=55021979451534">WhatsApp</a></li>
                                         </ul>
                                 </div>
                                 <!--
@@ -72,7 +73,7 @@
 
                     <div class="container index98">
                         <h2 class="home__work-title big-title">Portifolio</h2>
-                        <p>Alguns dos projetos que trabalho na agência <a target="_blank" href="https://proteina.digital">Proteina.digital</a>.</p>
+                        <p>Alguns dos projetos que desenvolvi na agência <a target="_blank" href="https://proteina.digital">Proteina Digital</a></p>
                     </div>
                     <br>
                     <section class="home-work container index99">
@@ -80,23 +81,27 @@
                         <div class="work-list wrapper">
                             <div class="work">
                                 <article class="work__item">
-                                    <a target="_blank" href="https://neosan.com.br">
+                                    <a target="_blank" href="https://www.neosan.com.br">
                                         <img src="img/neosan.png" class="thumbnail" alt="Neosan - Landing Page">
                                         Neosan - Landing Page
                                     </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
                                 </article>
                             </div>
                             <div class="work">
                                 <article class="work__item">
-                                    <a target="_blank" href="https://neosan.com.br">
+                                    <a target="_blank" href="https://www.proteina.digital">
                                         <img src="img/proteina.png" class="thumbnail" alt="Proteina Digital - Landing Page">
                                         Proteina Digital - Landing Page
                                     </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
                                 </article>
                             </div>
                             <div class="work">
                                 <article class="work__item">
-                                    <a target="_blank" href="https://neosan.com.br">
+                                    <a target="_blank" href="https://blog.bemglo.com/">
                                         <img src="img/bemglo_blog.png" class="thumbnail" alt="Bemglô - Blog">
                                         Bemglô - Blog
                                     </a>
@@ -104,7 +109,7 @@
                             </div>
                             <div class="work">
                                 <article class="work__item">
-                                    <a target="_blank" href="https://neosan.com.br">
+                                    <a target="_blank" href="https://blog.lickslegal.com/">
                                         <img src="img/blog_licks.png" class="thumbnail" alt="Lickslegal - Blog">
                                         Lickslegal - Blog
                                     </a>
@@ -112,10 +117,12 @@
                             </div>
                             <div class="work">
                                 <article class="work__item">
-                                    <a target="_blank" href="https://neosan.com.br">
+                                    <a target="_blank" href="https://crm.salescall.com.br/">
                                         <img src="img/salescall.png" class="thumbnail" alt="Salescall - Landing Page">
                                         Salescall - Landing Page
                                     </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
                                 </article>
                             </div>
                         </div>
@@ -170,6 +177,7 @@
                                     <ul class="footer__links">
                                         <li><a target="_blank" href="https://github.com/wkiane">Github</a>
                                         <li><a target="_blank" href="https://www.proteina.digital/">Agência</a>
+                                        <li><a target="_blank" href="https://api.whatsapp.com/send?phone=55021979451534">Whatsapp</a>
                                     </ul>
                                 </div>
                                 <div class="form-wrapper">
