google verification e mobile teste

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Willa Kiane - Web Developer</title>
 	<!-- meta tags -->
+	<meta name="google-site-verification" content="hxMJXrUu6JIxVyZHfng42FkJoCYrCM6TVp3vE6LIyqo" />
 	<meta name="Keywords" content="webflow, javascript, jquery, landing page, bootstrap, html, ruby on rails, pagespeed insights">
 	<meta name="Description" content="Desenvolvedora web especializada em webflow, javascript e ruby on rails">
 
