tirei a secao de habilidades

--- a/teste.html
+++ b/teste.html
@@ -125,70 +125,61 @@
                         </div>
                     </section>
                 </div>
-
-                <div class="section index99" style="color: black; margin-top: 20px; border-bottom: 1px solid lightgrey;">
-                    <div class="container">
-                        <div class="item columns">
-                            <div class="column is-3" style="border: 0px solid red;">
-                                <p style="text-align: center; font-size: 35px;">
-                                    <span class="fe fe-activity"></span>
-                                </p>
-
-                                <p class="item-title" style="text-align: center; margin-top: 10px;">
-                                    <span style="font-weight: bold;">Health monitoring</span>
-                                </p>
-
-                                <p style="text-align: center; margin-top: 10px;">
-                                    Monitor uptime of your website. Get instant alerts if anything breaks.
-                                </p>
-
-                            </div>
-
-                            <div class="column is-3" style="border: 0px solid red;">
-                                <p style="text-align: center; font-size: 35px;">
-                                    <span class="fe fe-watch"></span>
-                                </p>
-
-                                <p class="item-title" style="text-align: center; margin-top: 10px;">
-                                    <span style="font-weight: bold;">Latency</span>
-                                </p>
-
-                                <p style="text-align: center; margin-top: 10px;">
-                                    Track the response time of your website.
-                                </p>
-                            </div>
-
-                            <div class="column is-3" style="border: 0px solid red;">
-                                <p style="text-align: center; font-size: 35px;">
-                                    <span class="fe fe-users"></span>
-                                </p>
-
-                                <p class="item-title" style="text-align: center; margin-top: 10px;">
-                                    <span style="font-weight: bold;">Team</span>
-                                </p>
-
-                                <p style="text-align: center; margin-top: 10px;">
-                                    Add your team members so they can keep track and get alerts.
-                                </p>
-                            </div>
-
-
-                            <div class="column is-3" style="border: 0px solid red;">
-                                <p style="text-align: center; font-size: 35px;">
-                                    <span class="fe fe-heart"></span>
-                                </p>
-
-                                <p class="item-title" style="text-align: center; margin-top: 10px;">
-                                    <span style="font-weight: bold;">Ease of use</span>
-                                </p>
-
-                                <p style="text-align: center; margin-top: 10px;">
-                                    PingStack is beautiful and easy to use.
-                                </p>
-                            </div>
-
-                        </div>
+                    <div style="display: none;" class="container index98">
+                        <p>Outros projetos que desenvolvi para expandir meus conhecimentos.</p>
                     </div>
+                    <br>
+                    <section style="display: none;" class="home-work container index99">
+                        <!--- <a href="/work" class="btn-link">View all work</a> -->
+                        <div class="work-list wrapper">
+                            <div class="work">
+                                <article class="work__item">
+                                    <a target="_blank" href="https://www.neosan.com.br">
+                                        <img src="img/neosan.png" class="thumbnail" alt="Neosan - Landing Page">
+                                        Neosan - Landing Page
+                                    </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
+                                </article>
+                            </div>
+                            <div class="work">
+                                <article class="work__item">
+                                    <a target="_blank" href="https://www.proteina.digital">
+                                        <img src="img/proteina.png" class="thumbnail" alt="Proteina Digital - Landing Page">
+                                        Proteina Digital - Landing Page
+                                    </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
+                                </article>
+                            </div>
+                            <div class="work">
+                                <article class="work__item">
+                                    <a target="_blank" href="https://blog.bemglo.com/">
+                                        <img src="img/bemglo_blog.png" class="thumbnail" alt="Bemglô - Blog">
+                                        Bemglô - Blog
+                                    </a>
+                                </article>
+                            </div>
+                            <div class="work">
+                                <article class="work__item">
+                                    <a target="_blank" href="https://blog.lickslegal.com/">
+                                        <img src="img/blog_licks.png" class="thumbnail" alt="Lickslegal - Blog">
+                                        Lickslegal - Blog
+                                    </a>
+                                </article>
+                            </div>
+                            <div class="work">
+                                <article class="work__item">
+                                    <a target="_blank" href="https://crm.salescall.com.br/">
+                                        <img src="img/salescall.png" class="thumbnail" alt="Salescall - Landing Page">
+                                        Salescall - Landing Page
+                                    </a>
+                                    <br>
+                                    <small>Design por <a target="_blank" href="https://www.ericemanuel.com.br/">Eric Emanuel</a></small>
+                                </article>
+                            </div>
+                        </div>
+                    </section>
                 </div>
 
                 <div>
