--- a/teste.html
+++ b/teste.html
@@ -23,13 +23,27 @@
                         <div>
                             <header class="header">
                                 <div class="container">
+                                <nav class="navbar is-transparent">
+                                    <div class="logo navbar-brand shake">
+                                        <a href="">KIANE</a>
+                                    </div>
+
+                                    <div class="email">
+                                        <svg height="14" viewBox="0 0 16 14" width="16" xmlns="http://www.w3.org/2000/svg">
+                                            <polygon fill="#FFFFFF" points="9.3 .3 7.9 1.7 12.2 6 0 6 0 8 12.2 8 7.9 12.3 9.3 13.7 16 7" opacity=".305"></polygon>
+                                        </svg>
+                                        <button class="email-link shake">willa_abreu@outlook.com</button>
+                                    </div>
+                                </nav>
+                                </div>
+                                <!--
+                                <div class="container">
                                     <nav>
                                         <div class="logo shake">
                                             <a href="/" class="">
                                                 KIANE
                                             </a>
                                         </div>
-                                        <!---->
                                         <div class="email">
                                             <svg height="14" viewBox="0 0 16 14" width="16" xmlns="http://www.w3.org/2000/svg">
                                                 <polygon fill="#FFFFFF" points="9.3 .3 7.9 1.7 12.2 6 0 6 0 8 12.2 8 7.9 12.3 9.3 13.7 16 7" opacity=".305"></polygon>
@@ -38,6 +52,7 @@
                                         </div>
                                     </nav>
                                 </div>
+                                -->
                             </header>
                             <!---->
                         </div>
@@ -233,7 +248,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="vendors/jquery.js"></script>
         <script src="js/script.js"></script>
 </body>
 </html>
