--- a/teste.html
+++ b/teste.html
@@ -32,7 +32,7 @@
                                         <svg height="14" viewBox="0 0 16 14" width="16" xmlns="http://www.w3.org/2000/svg">
                                             <polygon fill="#FFFFFF" points="9.3 .3 7.9 1.7 12.2 6 0 6 0 8 12.2 8 7.9 12.3 9.3 13.7 16 7" opacity=".305"></polygon>
                                         </svg>
-                                        <button class="email-link shake">willa_abreu@outlook.com</button>
+                                        <a class="email-link shake" href="mailto:contato@kiane.com.br">contato@kiane.com.br</a>
                                     </div>
                                 </nav>
                                 </div>
@@ -71,7 +71,7 @@
                                         <div class="hero__slogan"></div>
                                         <p class="hero__eyebrow eyebrow">Onde me encontrar?</p>
                                         <ul>
-                                            <li class="shake text-light"><a target="_blank" href="#">wkiane - linkedin</a></li><br>
+                                            <!-- <li class="shake text-light"><a target="_blank" href="#">wkiane - linkedin</a></li><br> -->
                                             <li class="shake text-light"><a target="_blank" href="https://github.com/wkiane">wkiane - github</a></li><br>
                                             <li class="shake text-light"><a target="_blank" href="https://proteina.digital">Proteina.digital - Agência onde trabalho</a></li><br>
                                             <li class="shake text-light"><a target="_blank" href="https://api.whatsapp.com/send?phone=55021979451534">WhatsApp</a></li>
@@ -221,17 +221,16 @@
                                             Ops! Algo deu errado.
                                           </div>
                                     </div>
-                                    <!-- <h2 class="footer__title big-title">Contato</h2><br><br> -->
                                     <form method="POST" id="form_footer">
-                                      <!-- nome -->
+
                                       <div class="field">
                                         <input type="text" name="name" class="input" placeholder="Seu nome">
                                       </div>
-                                      <!-- email -->
+
                                       <div class="field">
                                         <input type="email" name="email" class="input" placeholder="Seu Email">
                                       </div>
-                                      <!-- mensagem -->
+
                                       <div class="field">
                                         <textarea class="textarea" name="message" placeholder="Sua mensagem"></textarea>
                                       </div>
