--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <footer class="footer" style="padding: 15px 0;">
                         <div class="container">
                                     <p class="footer__email">
-                                    <ul class="footer__links" style="display: flex; justify-content: center; flex-direction: row;">
+                                    <ul class="footer__links">
                                         <li><a target="_blank" href="https://github.com/wkiane" style="padding-right: 20px;">Github</a>
                                         <li><a target="_blank" href="https://www.instagram.com/wkiane/" style="padding-right: 20px;">Instagram</a>
                                         <li><a target="_blank" href="https://www.proteina.digital/" style="padding-right: 20px;">Agência</a>
